# bridge-hack-2024

./: README.md  package.json
backend/: .env  README.md  pyproject.toml
backend/api/: api.py
backend/bridge_hack/service/: service.py
backend/model/: .null-ls_445487_generate_dataset.py  .null-ls_978200_generate_dataset.py  assinador-binary.csv  assinador-not-service.csv  assinador-service.csv  compile_csv.py  generate_dataset.py  je-binary.csv  je-not-service.csv  je-service.csv  je.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatComponent.tsx  FormComponent.tsx  HeaderComponent.tsx  MessageComponent.tsx
frontend/src/page/: RootView.tsx
frontend/src/service/: service.ts
